[tool.poetry]
name = "map-elites-prompt"
version = "0.1.0"
description = ""
authors = ["Ella <ella.bettison@xapien.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.65.4"
google-genai = "^1.4.0"
numpy = "^2.2.3"
termcolor = "^2.5.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
